--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.0",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
