--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.3",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
